--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,15 +1,21 @@
-.button {
+.buttonMore {
   border-radius: 6px;
   padding: 10px 20px;
   font-weight: bold;
   font-size: 20px;
   cursor: pointer;
+  margin: 0 auto;
+  border: 1px solid black;
+  background-color: blue;
+  color: white;
 
   &:hover {
     background-color: lightgreen;
+    color: black;
   }
 
   &:focus {
     background-color: lightgreen;
+    color: black;
   }
 }
